# albion-island-bot

./: .gitignore  .window_origin_cache.json  README.md  main.py  pyproject.toml  requirements.txt  test_input.py
config/: islands.json  islands.py  settings.py
input/: __init__.py  keyboard.py  mouse.py
scripts/: calibrate.py  check_anchor_origin.py  check_new_templates.py  check_spawn_point.py  check_window_geometry_overlay.py  check_window_geometry_scaled.py  check_window_targeting.py  extract_template.py  test_click_close_popup.py  test_full_state_detection.py  test_player_marker.py  test_popup_detection.py  test_water_button.py  test_window_locator.py  water_button.py
src/albion_bot/core/: polling.py
src/albion_bot/game/: actions.py  config.py  window.py
src/albion_bot/input/: controller.py
src/albion_bot/input/backends/: linux_input.py  windows_input.py
src/albion_bot/platform/: capture.py
src/albion_bot/platform/capture_backends/: wayland_capture.py  windows_capture.py  x11_capture.py
src/albion_bot/vision/: detector.py  matcher.py  player_marker.py  seed_detector.py  water_button.py  window_locator.py
utils/: logger.py  window_manager.py
vision/: __init__.py  capturer.py
